synaptic (0.62.3) unstable; urgency=low

  * gtk/rgpkgdetails.{cc,h}:
    - download/show big image when clicking on the
      thumbnail 

 --

synaptic (0.62.2) unstable; urgency=low

  * po/es.po:
    - updated spanish translation (thanks to 
      Francisco Javier Cuadrado)
  * po/cz.po: 
    - updated Czech translation (thanks to Kamil Páral)
  * gtk/glade/dialog_upgrade.glade:
    - provide a mnemonics in the upgrade dialog,
      closes: #491179 (thanks to Matt Kraai)
  * gtk/glade/window_fetch.glade:
    - dialog fix (thanks to Oded Arbel) (LP: #228127)
  * gtk/rgdebinstallprogress.cc:
    - intercept ctrl-c in the terminal window and ask
      if that is really the desired action
    - make sure that SIGCHLD is not blocked to work around
      kdesudo (LP: #156041)
  * gtk/rgmainwindow.cc:
    - fix "Gtk-CRITICAL **: gtk_tree_view_unref_tree_helper"
      assertion failure error (LP: #38397, closes: #341645)
  * common/rpackageview.cc:
    - add new "Missing Recommends" default filter
  * common/rpackage.cc:
    - fix code to get candidate origin
    - support getting the candidate release file name
  * common/rpackagestatus.cc:
    - support maintenanceEndTime() (if the distro supports that)
  * gtk/rgpkgdetails.{cc,h}, common/rpackage.{cc,h}:
    - add "Get Screenshot" button that talks to screenshots.debian.net

 -- Michael Vogt <mvo@debian.org>  Fri, 14 Nov 2008 11:44:43 +0100

synaptic (0.62.1) unstable; urgency=low

  * po/es.po:
    - updated Spanish translation (thanks to
       Francisco Javier Cuadrado)
  * debian/control:
    - added "menu" to the recommends (closes: #478250)
  * gtk/glade/window_main.glade:
    - make the main vpane shinkable
  * gtk/rgmainwindow.cc:
    - do not loose the keyboard focus after a package 
      action in the listview
  * debian/control:
    - switch bzr branch to bzr.debian.org

 -- Michael Vogt <mvo@debian.org>  Tue, 18 Jun 2008 10:17:31 +0200

synaptic (0.62) unstable; urgency=low

  [ Michael Vogt]