@@ -1,0 +1,5 @@
+[BUILDDEB]
+native = true
+
+[HOOKS]
+pre-build = ./autogen.sh
