@@ -120,12 +120,12 @@ unpatch:
 #	debian/svn-build/synaptic-$(S_DEBVER)/autogen.sh
 #	(cd debian/svn-build/synaptic-$(S_DEBVER); $(DEB_BUILD_PROG))
 
-arch-build: configure.in
-	rm -rf debian/arch-build
-	mkdir -p debian/arch-build/$(PKG)-$(DEBVER)
-	tar -c --exclude=arch-build -f - `bzr inventory` | (cd debian/arch-build/$(PKG)-$(DEBVER);tar xf -)
-	debian/arch-build/$(PKG)-$(DEBVER)/autogen.sh
-	(cd debian/arch-build/$(PKG)-$(DEBVER) && $(DEB_BUILD_PROG))
+#arch-build: configure.in
+#	rm -rf debian/arch-build
+#	mkdir -p debian/arch-build/$(PKG)-$(DEBVER)
+#	tar -c --exclude=arch-build -f - `bzr inventory` | (cd debian/arch-build/$(PKG)-$(DEBVER);tar xf -)
+#	debian/arch-build/$(PKG)-$(DEBVER)/autogen.sh
+#	(cd debian/arch-build/$(PKG)-$(DEBVER) && $(DEB_BUILD_PROG))
 
 
 binary: binary-indep binary-arch
