@@ -3,8 +3,10 @@ synaptic (0.62.3) unstable; urgency=low
   * gtk/rgpkgdetails.{cc,h}:
     - download/show big image when clicking on the
       thumbnail 
+  * debian/rules, .bzr-builddeb/default.conf
+    - bybye arch-build, hello "bzr-buildpackage"
 
- --
+ -- 
 
 synaptic (0.62.2) unstable; urgency=low
 
